--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -89,3 +89,13 @@ body {
         border-bottom: 0;
     }
 }
+
+.map-surface {
+  .square {
+    border: 1px solid black;
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+  }
+}
+
