added color for blue and red teams (for now) and templates for the map

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -99,3 +99,13 @@ body {
   }
 }
 
+@team-red: #c14234;
+@team-blu: #598aaa;
+
+[data-player="player1"] {
+  background-color: @team-blu;
+}
+
+[data-player="player2"] {
+  background-color: @team-red;
+}
