added map chrome squares and styling

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -97,6 +97,12 @@ body {
     height: 40px;
     display: inline-block;
   }
+  .chrome {
+    border: 1px dashed grey;
+  }
+  .chrome-hidden {
+    visibility: hidden;
+  }
 }
 
 @team-red: #c14234;
