added hud view and template -- prevents default form validation to avoid page reload

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -90,18 +90,27 @@ body {
     }
 }
 
-.map-surface {
-  .square {
-    border: 1px solid black;
-    width: 40px;
-    height: 40px;
-    display: inline-block;
-  }
-  .chrome {
-    border: 1px dashed grey;
-  }
-  .chrome-hidden {
-    visibility: hidden;
+#menu {
+  margin-bottom: 20px;
+}
+
+#map {
+  margin: 0 auto;
+  text-align: center;
+
+  .map-surface {
+    .square {
+      border: 1px solid black;
+      width: 40px;
+      height: 40px;
+      display: inline-block;
+    }
+    .chrome {
+      border: 1px dashed grey;
+    }
+    .chrome-hidden {
+      visibility: hidden;
+    }
   }
 }
 
