added hover effect for chrome squares

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -107,6 +107,9 @@ body {
     }
     .chrome {
       border: 1px dashed grey;
+      &:hover {
+        border-color: black;
+      }
     }
     .chrome-hidden {
       visibility: hidden;
