--- a/app/templates/map-square.html
+++ b/app/templates/map-square.html
@@ -1,1 +1,1 @@
-<div class="square <%= cls.blocker %> <%= cls.chrome %> <%= cls.hidden %>" data-player="<%= player %>" data-pos-x="<%= x %>" data-pos-y="<%= y %>"></div>
+<div class="square <%= cls.blocker %> <%= cls.chrome %> <%= cls.hidden %>" data-player="<%= player %>" data-pos-x="<%= x %>" data-pos-y="<%= y %>" data-allows="<%= allows %>"></div>
