added game hud and templates

--- a/app/templates/hud.html
+++ b/app/templates/hud.html
@@ -4,6 +4,7 @@
   <div class="map-surface"></div>
 </div>
 
-<div id="hud-player-squares"></div>
+<div id="hud-squares"></div>
+<div id="hud-actions"></div>
 
 <div id="hud-chat"></div>
