added style for move-candidate -- clicking on move action will now show move candidates -- clicking on move candidates is now ready to move players

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -180,6 +180,14 @@ body {
     [data-allows="right-down-left"] {
       border-top: @wall;
     }
+
+    .move-candidate {
+      width: 15px;
+      height: 15px;
+      position: relative;
+      background-color: yellow;
+      margin: 0 auto;
+    }
   }
 }
 
