added hud-squares to the ui and select() method to the map (square collection)

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -94,17 +94,87 @@ body {
   margin-bottom: 20px;
 }
 
+.square {
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  &.selected {
+    border-color: #666
+  }
+}
+
+@wall: 4px solid black;
+[data-allows="all"] {
+}
+[data-allows=""] {
+  border-top: @wall;
+  border-right: @wall;
+  border-bottom: @wall;
+  border-left: @wall;
+}
+[data-allows="up"] {
+  border-right: @wall;
+  border-bottom: @wall;
+  border-left: @wall;
+}
+[data-allows="right"] {
+  border-top: @wall;
+  border-bottom: @wall;
+  border-left: @wall;
+}
+[data-allows="down"] {
+  border-top: @wall;
+  border-right: @wall;
+  border-left: @wall;
+}
+[data-allows="left"] {
+  border-top: @wall;
+  border-right: @wall;
+  border-down: @wall;
+}
+[data-allows="up-right"] {
+  border-bottom: @wall;
+  border-left: @wall;
+}
+[data-allows="up-down"] {
+  border-right: @wall;
+  border-left: @wall;
+}
+[data-allows="up-left"] {
+  border-right: @wall;
+  border-bottom: @wall;
+}
+[data-allows="right-down"] {
+  border-top: @wall;
+  border-left: @wall;
+}
+[data-allows="right-left"] {
+  border-top: @wall;
+  border-bottom: @wall;
+}
+[data-allows="down-left"] {
+  border-top: @wall;
+  border-right: @wall;
+}
+[data-allows="up-right-down"] {
+  border-left: @wall;
+}
+[data-allows="up-right-left"] {
+  border-bottom: @wall;
+}
+[data-allows="up-down-left"] {
+  border-right: @wall;
+}
+[data-allows="right-down-left"] {
+  border-top: @wall;
+}
+
 #map {
   margin: 0 auto;
   text-align: center;
 
   .map-surface {
-    .square {
-      border: 1px solid black;
-      width: 40px;
-      height: 40px;
-      display: inline-block;
-    }
     .chrome {
       border: 1px dashed grey;
       &:hover {
@@ -115,71 +185,6 @@ body {
       visibility: hidden;
     }
 
-    @wall: 4px solid black;
-    [data-allows="all"] {
-    }
-    [data-allows=""] {
-      border-top: @wall;
-      border-right: @wall;
-      border-bottom: @wall;
-      border-left: @wall;
-    }
-    [data-allows="up"] {
-      border-right: @wall;
-      border-bottom: @wall;
-      border-left: @wall;
-    }
-    [data-allows="right"] {
-      border-top: @wall;
-      border-bottom: @wall;
-      border-left: @wall;
-    }
-    [data-allows="down"] {
-      border-top: @wall;
-      border-right: @wall;
-      border-left: @wall;
-    }
-    [data-allows="left"] {
-      border-top: @wall;
-      border-right: @wall;
-      border-down: @wall;
-    }
-    [data-allows="up-right"] {
-      border-bottom: @wall;
-      border-left: @wall;
-    }
-    [data-allows="up-down"] {
-      border-right: @wall;
-      border-left: @wall;
-    }
-    [data-allows="up-left"] {
-      border-right: @wall;
-      border-bottom: @wall;
-    }
-    [data-allows="right-down"] {
-      border-top: @wall;
-      border-left: @wall;
-    }
-    [data-allows="right-left"] {
-      border-top: @wall;
-      border-bottom: @wall;
-    }
-    [data-allows="down-left"] {
-      border-top: @wall;
-      border-right: @wall;
-    }
-    [data-allows="up-right-down"] {
-      border-left: @wall;
-    }
-    [data-allows="up-right-left"] {
-      border-bottom: @wall;
-    }
-    [data-allows="up-down-left"] {
-      border-right: @wall;
-    }
-    [data-allows="right-down-left"] {
-      border-top: @wall;
-    }
 
     .move-candidate {
       width: 15px;
