--- a/app/templates/hud-squares.html
+++ b/app/templates/hud-squares.html
@@ -1,1 +1,4 @@
-squares
+<div class="hud-square" data-hud-square-index="0"></div>
+<div class="hud-square" data-hud-square-index="1"></div>
+<div class="hud-square" data-hud-square-index="2"></div>
+<div class="hud-square" data-hud-square-index="3"></div>
