can rotate selected square in hud clockwise and anticlockwise

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -131,7 +131,7 @@ body {
 [data-allows="left"] {
   border-top: @wall;
   border-right: @wall;
-  border-down: @wall;
+  border-bottom: @wall;
 }
 [data-allows="up-right"] {
   border-bottom: @wall;
