--- a/app/templates/hud-squares.html
+++ b/app/templates/hud-squares.html
@@ -1,3 +1,8 @@
+<div class="hud-rotate">
+  rotate
+  <div class="rotate" data-rotate-direction="left">left</div>
+  <div class="rotate" data-rotate-direction="right">right</div>
+</div>
 <div class="hud-square" data-hud-square-index="0"></div>
 <div class="hud-square" data-hud-square-index="1"></div>
 <div class="hud-square" data-hud-square-index="2"></div>
