choosing an action now cancels the previously selected action

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -185,13 +185,16 @@ body {
       visibility: hidden;
     }
 
-
     .move-candidate {
       width: 15px;
       height: 15px;
       position: relative;
       background-color: yellow;
       margin: 0 auto;
+    }
+
+    .map-row {
+      display: block;
     }
   }
 }
