--- a/app/templates/map-square-chrome.html
+++ b/app/templates/map-square-chrome.html
@@ -1,1 +1,1 @@
-<div class="square chrome <%= cls.hidden %>" data-pos-x="<%= x %>" data-pos-y="<%= y %>" data-direction="<%= direction %>"></div>
+<div class="square chrome <%= cls.hidden %>" data-pos-x="<%= x %>" data-pos-y="<%= y %>"></div>
