--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -96,9 +96,10 @@ body {
 
 .square {
   border: 1px solid black;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   display: inline-block;
+  position: absolute;
   &.selected {
     border-color: #666
   }
@@ -175,6 +176,9 @@ body {
   text-align: center;
 
   .map-surface {
+    position: relative;
+    margin: 0 auto;
+
     .chrome {
       border: 1px dashed grey;
       &:hover {
@@ -210,3 +214,53 @@ body {
   background-color: @team-red;
 }
 
+.hud-square-list {
+  .hud-square-item {
+    list-style: none;
+
+    .hud-square {
+      float: left;
+      padding: 0 5px;
+    }
+    .rotate {
+      float: left;
+      visibility: hidden;
+    }
+  }
+
+  .hud-square-item:hover {
+    .rotate {
+      visibility: visible;
+    }
+  }
+}
+
+
+@squareWidth: 50px;
+
+[data-pos-y="top"] { top: -@squareWidth; }
+[data-pos-x="right"] { right: -@squareWidth; }
+[data-pos-y="bottom"] { bottom: -@squareWidth; }
+[data-pos-x="left"] { left: -@squareWidth; }
+
+[data-pos-x="0"] { left: 0px; }
+[data-pos-x="1"] { left: @squareWidth; }
+[data-pos-x="2"] { left: @squareWidth * 2; }
+[data-pos-x="3"] { left: @squareWidth * 3; }
+[data-pos-x="4"] { left: @squareWidth * 4; }
+[data-pos-x="5"] { left: @squareWidth * 5; }
+[data-pos-x="6"] { left: @squareWidth * 6; }
+[data-pos-x="7"] { left: @squareWidth * 7; }
+[data-pos-x="8"] { left: @squareWidth * 8; }
+[data-pos-x="9"] { left: @squareWidth * 9; }
+
+[data-pos-y="0"] { top: 0px; }
+[data-pos-y="1"] { top: @squareWidth; }
+[data-pos-y="2"] { top: @squareWidth * 2; }
+[data-pos-y="3"] { top: @squareWidth * 3; }
+[data-pos-y="4"] { top: @squareWidth * 4; }
+[data-pos-y="5"] { top: @squareWidth * 5; }
+[data-pos-y="6"] { top: @squareWidth * 6; }
+[data-pos-y="7"] { top: @squareWidth * 7; }
+[data-pos-y="8"] { top: @squareWidth * 8; }
+[data-pos-y="9"] { top: @squareWidth * 9; }
