--- a/app/templates/hud-squares.html
+++ b/app/templates/hud-squares.html
@@ -1,9 +1,29 @@
-<div class="hud-rotate">
-  rotate
-  <div class="rotate" data-rotate-direction="left">left</div>
-  <div class="rotate" data-rotate-direction="right">right</div>
-</div>
-<div class="hud-square" data-hud-square-index="0"></div>
-<div class="hud-square" data-hud-square-index="1"></div>
-<div class="hud-square" data-hud-square-index="2"></div>
-<div class="hud-square" data-hud-square-index="3"></div>
+<ol class="hud-square-list">
+  <li class="hud-square-item">
+    <div class="rotate" data-rotate-direction="left">left</div>
+    <div class="hud-square" data-hud-square-index="0"></div>
+    <div class="rotate" data-rotate-direction="right">right</div>
+    <div class="clearfix"></div>
+  </li>
+  <li class="hud-square-item">
+    <div class="rotate" data-rotate-direction="left">left</div>
+    <div class="hud-square" data-hud-square-index="1"></div>
+    <div class="rotate" data-rotate-direction="right">right</div>
+    <div class="clearfix"></div>
+  </li>
+  </li>
+  <li class="hud-square-item">
+    <div class="rotate" data-rotate-direction="left">left</div>
+    <div class="hud-square" data-hud-square-index="2"></div>
+    <div class="rotate" data-rotate-direction="right">right</div>
+    <div class="clearfix"></div>
+  </li>
+  </li>
+  <li class="hud-square-item">
+    <div class="rotate" data-rotate-direction="left">left</div>
+    <div class="hud-square" data-hud-square-index="3"></div>
+    <div class="rotate" data-rotate-direction="right">right</div>
+    <div class="clearfix"></div>
+  </li>
+  </li>
+</ol>
