--- a/app/templates/hud.html
+++ b/app/templates/hud.html
@@ -1,7 +1,8 @@
 <div id="hud-info"></div>
 
 <div id="map">
-  <div class="map-surface" data-row-width></div>
+  <div class="map-surface"></div>
+  <div class="map-chrome"></div>
 </div>
 
 <div id="hud-squares"></div>
